--- a/css/output.css
+++ b/css/output.css
@@ -1141,29 +1141,9 @@
       height: calc(var(--spacing) * 160);
     }
   }
-  .max-\[1920px\]\:max-h-\[85\%\] {
-    @media (width < 1920px) {
-      max-height: 85%;
-    }
-  }
-  .max-\[1920px\]\:max-h-\[86\%\] {
-    @media (width < 1920px) {
-      max-height: 86%;
-    }
-  }
-  .max-\[1920px\]\:max-h-\[87\%\] {
-    @media (width < 1920px) {
-      max-height: 87%;
-    }
-  }
   .max-\[1920px\]\:max-h-\[88\%\] {
     @media (width < 1920px) {
       max-height: 88%;
-    }
-  }
-  .max-\[1920px\]\:max-h-\[89\%\] {
-    @media (width < 1920px) {
-      max-height: 89%;
     }
   }
   .max-\[1920px\]\:w-\[350px\] {
@@ -1371,34 +1351,14 @@
       height: calc(var(--spacing) * 90);
     }
   }
-  .max-\[1440px\]\:h-100 {
-    @media (width < 1440px) {
-      height: calc(var(--spacing) * 100);
-    }
-  }
-  .max-\[1440px\]\:h-107 {
-    @media (width < 1440px) {
-      height: calc(var(--spacing) * 107);
-    }
-  }
   .max-\[1440px\]\:h-108 {
     @media (width < 1440px) {
       height: calc(var(--spacing) * 108);
     }
   }
-  .max-\[1440px\]\:h-110 {
-    @media (width < 1440px) {
-      height: calc(var(--spacing) * 110);
-    }
-  }
   .max-\[1440px\]\:h-150\! {
     @media (width < 1440px) {
       height: calc(var(--spacing) * 150) !important;
-    }
-  }
-  .max-\[1440px\]\:h-170 {
-    @media (width < 1440px) {
-      height: calc(var(--spacing) * 170);
     }
   }
   .max-\[1440px\]\:h-200 {
@@ -1501,11 +1461,6 @@
       width: calc(var(--spacing) * 70);
     }
   }
-  .max-\[1440px\]\:w-74\.5 {
-    @media (width < 1440px) {
-      width: calc(var(--spacing) * 74.5);
-    }
-  }
   .max-\[1440px\]\:w-92\.75 {
     @media (width < 1440px) {
       width: calc(var(--spacing) * 92.75);
@@ -1531,11 +1486,6 @@
       width: calc(var(--spacing) * 120);
     }
   }
-  .max-\[1440px\]\:w-125\.5 {
-    @media (width < 1440px) {
-      width: calc(var(--spacing) * 125.5);
-    }
-  }
   .max-\[1440px\]\:w-\[182px\] {
     @media (width < 1440px) {
       width: 182px;
@@ -1549,11 +1499,6 @@
   .max-\[1440px\]\:w-full {
     @media (width < 1440px) {
       width: 100%;
-    }
-  }
-  .max-\[1440px\]\:max-w-5xl {
-    @media (width < 1440px) {
-      max-width: var(--container-5xl);
     }
   }
   .max-\[1440px\]\:max-w-60 {
@@ -1604,6 +1549,11 @@
   .max-\[1440px\]\:min-w-30\! {
     @media (width < 1440px) {
       min-width: calc(var(--spacing) * 30) !important;
+    }
+  }
+  .max-\[1440px\]\:flex-1 {
+    @media (width < 1440px) {
+      flex: 1;
     }
   }
   .max-\[1440px\]\:grid-cols-2 {
@@ -2196,6 +2146,11 @@
       max-width: 100%;
     }
   }
+  .max-\[1024px\]\:min-w-\[138px\] {
+    @media (width < 1024px) {
+      min-width: 138px;
+    }
+  }
   .max-\[1024px\]\:basis-\[calc\(50\%-0\.375rem\)\] {
     @media (width < 1024px) {
       flex-basis: calc(50% - 0.375rem);
@@ -2719,6 +2674,11 @@
       max-width: 100%;
     }
   }
+  .max-\[768px\]\:flex-0 {
+    @media (width < 768px) {
+      flex: 0;
+    }
+  }
   .max-\[768px\]\:flex-1 {
     @media (width < 768px) {
       flex: 1;
@@ -2982,29 +2942,9 @@
       word-break: normal;
     }
   }
-  .min-\[1024px\]\:max-h-100 {
-    @media (width >= 1024px) {
-      max-height: calc(var(--spacing) * 100);
-    }
-  }
-  .min-\[1024px\]\:max-h-200 {
-    @media (width >= 1024px) {
-      max-height: calc(var(--spacing) * 200);
-    }
-  }
   .min-\[1024px\]\:max-h-250 {
     @media (width >= 1024px) {
       max-height: calc(var(--spacing) * 250);
-    }
-  }
-  .min-\[1024px\]\:max-h-300 {
-    @media (width >= 1024px) {
-      max-height: calc(var(--spacing) * 300);
-    }
-  }
-  .min-\[1024px\]\:max-h-400 {
-    @media (width >= 1024px) {
-      max-height: calc(var(--spacing) * 400);
     }
   }
   .min-\[1024px\]\:flex-1 {
