--- a/css/output.css
+++ b/css/output.css
@@ -11,7 +11,6 @@
     --spacing: 0.25rem;
     --container-md: 28rem;
     --container-3xl: 48rem;
-    --container-5xl: 64rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -197,6 +196,9 @@
   .sticky {
     position: sticky;
   }
+  .inset-0 {
+    inset: calc(var(--spacing) * 0);
+  }
   .-top-16 {
     top: calc(var(--spacing) * -16);
   }
@@ -221,8 +223,14 @@
   .-z-10 {
     z-index: calc(10 * -1);
   }
+  .z-1 {
+    z-index: 1;
+  }
   .z-10 {
     z-index: 10;
+  }
+  .z-12 {
+    z-index: 12;
   }
   .z-20 {
     z-index: 20;
@@ -454,6 +462,33 @@
   }
   .h-full {
     height: 100%;
+  }
+  .max-h-200 {
+    max-height: calc(var(--spacing) * 200);
+  }
+  .max-h-230 {
+    max-height: calc(var(--spacing) * 230);
+  }
+  .max-h-240 {
+    max-height: calc(var(--spacing) * 240);
+  }
+  .max-h-250 {
+    max-height: calc(var(--spacing) * 250);
+  }
+  .max-h-280 {
+    max-height: calc(var(--spacing) * 280);
+  }
+  .max-h-300 {
+    max-height: calc(var(--spacing) * 300);
+  }
+  .max-h-315 {
+    max-height: calc(var(--spacing) * 315);
+  }
+  .max-h-320 {
+    max-height: calc(var(--spacing) * 320);
+  }
+  .max-h-340 {
+    max-height: calc(var(--spacing) * 340);
   }
   .w-6 {
     width: calc(var(--spacing) * 6);
@@ -1139,11 +1174,6 @@
   .max-\[1920px\]\:h-160 {
     @media (width < 1920px) {
       height: calc(var(--spacing) * 160);
-    }
-  }
-  .max-\[1920px\]\:max-h-\[88\%\] {
-    @media (width < 1920px) {
-      max-height: 88%;
     }
   }
   .max-\[1920px\]\:w-\[350px\] {
@@ -2096,11 +2126,6 @@
       width: calc(var(--spacing) * 110);
     }
   }
-  .max-\[1024px\]\:w-\[138px\] {
-    @media (width < 1024px) {
-      width: 138px;
-    }
-  }
   .max-\[1024px\]\:w-\[728px\] {
     @media (width < 1024px) {
       width: 728px;
@@ -2674,11 +2699,6 @@
       max-width: 100%;
     }
   }
-  .max-\[768px\]\:flex-0 {
-    @media (width < 768px) {
-      flex: 0;
-    }
-  }
   .max-\[768px\]\:flex-1 {
     @media (width < 768px) {
       flex: 1;
@@ -2942,14 +2962,19 @@
       word-break: normal;
     }
   }
+  .min-\[1024px\]\:max-h-230 {
+    @media (width >= 1024px) {
+      max-height: calc(var(--spacing) * 230);
+    }
+  }
+  .min-\[1024px\]\:max-h-240 {
+    @media (width >= 1024px) {
+      max-height: calc(var(--spacing) * 240);
+    }
+  }
   .min-\[1024px\]\:max-h-250 {
     @media (width >= 1024px) {
       max-height: calc(var(--spacing) * 250);
-    }
-  }
-  .min-\[1024px\]\:flex-1 {
-    @media (width >= 1024px) {
-      flex: 1;
     }
   }
   .min-\[1024px\]\:justify-between {
