--- a/css/output.css
+++ b/css/output.css
@@ -250,6 +250,9 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .-mt-7 {
+    margin-top: calc(var(--spacing) * -7);
+  }
   .-mt-7\.5 {
     margin-top: calc(var(--spacing) * -7.5);
   }
@@ -258,6 +261,9 @@
   }
   .-mt-18 {
     margin-top: calc(var(--spacing) * -18);
+  }
+  .-mt-22 {
+    margin-top: calc(var(--spacing) * -22);
   }
   .-mt-22\.5 {
     margin-top: calc(var(--spacing) * -22.5);
@@ -300,6 +306,9 @@
   }
   .-mb-15 {
     margin-bottom: calc(var(--spacing) * -15);
+  }
+  .mb-0 {
+    margin-bottom: calc(var(--spacing) * 0);
   }
   .mb-0\! {
     margin-bottom: calc(var(--spacing) * 0) !important;
@@ -349,6 +358,9 @@
   .mb-16 {
     margin-bottom: calc(var(--spacing) * 16);
   }
+  .mb-19 {
+    margin-bottom: calc(var(--spacing) * 19);
+  }
   .mb-19\.5 {
     margin-bottom: calc(var(--spacing) * 19.5);
   }
@@ -397,6 +409,9 @@
   .hidden\! {
     display: none !important;
   }
+  .table {
+    display: table;
+  }
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
@@ -426,6 +441,9 @@
   }
   .h-19 {
     height: calc(var(--spacing) * 19);
+  }
+  .h-33 {
+    height: calc(var(--spacing) * 33);
   }
   .h-33\.5\! {
     height: calc(var(--spacing) * 33.5) !important;
@@ -475,6 +493,9 @@
   .w-8 {
     width: calc(var(--spacing) * 8);
   }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
   .w-10\! {
     width: calc(var(--spacing) * 10) !important;
   }
@@ -487,11 +508,17 @@
   .w-18 {
     width: calc(var(--spacing) * 18);
   }
+  .w-30 {
+    width: calc(var(--spacing) * 30);
+  }
   .w-30\! {
     width: calc(var(--spacing) * 30) !important;
   }
   .w-40 {
     width: calc(var(--spacing) * 40);
+  }
+  .w-41 {
+    width: calc(var(--spacing) * 41);
   }
   .w-41\.5 {
     width: calc(var(--spacing) * 41.5);
@@ -499,8 +526,14 @@
   .w-42 {
     width: calc(var(--spacing) * 42);
   }
+  .w-44 {
+    width: calc(var(--spacing) * 44);
+  }
   .w-44\.5 {
     width: calc(var(--spacing) * 44.5);
+  }
+  .w-46 {
+    width: calc(var(--spacing) * 46);
   }
   .w-46\.5 {
     width: calc(var(--spacing) * 46.5);
@@ -510,6 +543,9 @@
   }
   .w-74 {
     width: calc(var(--spacing) * 74);
+  }
+  .w-76 {
+    width: calc(var(--spacing) * 76);
   }
   .w-76\.5 {
     width: calc(var(--spacing) * 76.5);
@@ -619,6 +655,9 @@
   .flex-1 {
     flex: 1;
   }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
   .shrink-0 {
     flex-shrink: 0;
   }
@@ -627,6 +666,9 @@
   }
   .basis-\[calc\(50\%-0\.375rem\)\] {
     flex-basis: calc(50% - 0.375rem);
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .-rotate-90 {
     rotate: calc(90deg * -1);
@@ -639,6 +681,9 @@
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -699,6 +744,9 @@
   }
   .gap-13 {
     gap: calc(var(--spacing) * 13);
+  }
+  .gap-16 {
+    gap: calc(var(--spacing) * 16);
   }
   .gap-16\.5 {
     gap: calc(var(--spacing) * 16.5);
@@ -876,6 +924,9 @@
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
   }
+  .py-7 {
+    padding-block: calc(var(--spacing) * 7);
+  }
   .py-7\.5 {
     padding-block: calc(var(--spacing) * 7.5);
   }
@@ -891,11 +942,17 @@
   .py-40 {
     padding-block: calc(var(--spacing) * 40);
   }
+  .py-42 {
+    padding-block: calc(var(--spacing) * 42);
+  }
   .py-42\.5 {
     padding-block: calc(var(--spacing) * 42.5);
   }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
+  }
+  .pt-22 {
+    padding-top: calc(var(--spacing) * 22);
   }
   .pt-22\.5 {
     padding-top: calc(var(--spacing) * 22.5);
@@ -906,11 +963,17 @@
   .pt-39 {
     padding-top: calc(var(--spacing) * 39);
   }
+  .pt-42 {
+    padding-top: calc(var(--spacing) * 42);
+  }
   .pt-42\.5 {
     padding-top: calc(var(--spacing) * 42.5);
   }
   .pt-\[94px\] {
     padding-top: 94px;
+  }
+  .pr-46 {
+    padding-right: calc(var(--spacing) * 46);
   }
   .pr-46\.25 {
     padding-right: calc(var(--spacing) * 46.25);
@@ -930,6 +993,9 @@
   .pb-18 {
     padding-bottom: calc(var(--spacing) * 18);
   }
+  .pl-10 {
+    padding-left: calc(var(--spacing) * 10);
+  }
   .pl-10\! {
     padding-left: calc(var(--spacing) * 10) !important;
   }
@@ -945,6 +1011,9 @@
   .text-center\! {
     text-align: center !important;
   }
+  .text-start {
+    text-align: start;
+  }
   .text-start\! {
     text-align: start !important;
   }
@@ -955,6 +1024,10 @@
   .text-5xl {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-base {
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
   }
   .text-base\! {
     font-size: var(--text-base) !important;
@@ -1055,12 +1128,20 @@
   .underline {
     text-decoration-line: underline;
   }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .blur {
     --tw-blur: blur(8px);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .backdrop-filter {
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
@@ -2926,6 +3007,11 @@
       max-height: calc(var(--spacing) * 240);
     }
   }
+  .min-\[1024px\]\:max-h-245 {
+    @media (width >= 1024px) {
+      max-height: calc(var(--spacing) * 245);
+    }
+  }
   .min-\[1024px\]\:max-h-250 {
     @media (width >= 1024px) {
       max-height: calc(var(--spacing) * 250);
@@ -3629,6 +3715,11 @@ button {
   syntax: "*";
   inherits: false;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -3682,6 +3773,42 @@ button {
   syntax: "*";
   inherits: false;
 }
+@property --tw-backdrop-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-sepia {
+  syntax: "*";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -3693,6 +3820,7 @@ button {
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
@@ -3706,6 +3834,15 @@ button {
       --tw-drop-shadow-color: initial;
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
+      --tw-backdrop-blur: initial;
+      --tw-backdrop-brightness: initial;
+      --tw-backdrop-contrast: initial;
+      --tw-backdrop-grayscale: initial;
+      --tw-backdrop-hue-rotate: initial;
+      --tw-backdrop-invert: initial;
+      --tw-backdrop-opacity: initial;
+      --tw-backdrop-saturate: initial;
+      --tw-backdrop-sepia: initial;
     }
   }
 }
