--- a/css/output.css
+++ b/css/output.css
@@ -212,9 +212,6 @@
   .top-10 {
     top: calc(var(--spacing) * 10);
   }
-  .-right-4 {
-    right: calc(var(--spacing) * -4);
-  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -250,9 +247,6 @@
   }
   .z-2000 {
     z-index: 2000;
-  }
-  .col-span-2 {
-    grid-column: span 2 / span 2;
   }
   .mx-auto {
     margin-inline: auto;
@@ -467,9 +461,6 @@
   .h-\[175px\] {
     height: 175px;
   }
-  .h-\[200px\] {
-    height: 200px;
-  }
   .h-\[310px\] {
     height: 310px;
   }
@@ -488,9 +479,6 @@
   .h-\[476px\] {
     height: 476px;
   }
-  .h-auto {
-    height: auto;
-  }
   .h-full {
     height: 100%;
   }
@@ -499,12 +487,6 @@
   }
   .max-h-315 {
     max-height: calc(var(--spacing) * 315);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
-  .w-3\/4 {
-    width: calc(3/4 * 100%);
   }
   .w-6 {
     width: calc(var(--spacing) * 6);
@@ -581,20 +563,11 @@
   .w-\[75px\] {
     width: 75px;
   }
-  .w-\[85\%\] {
-    width: 85%;
-  }
   .w-\[350px\] {
     width: 350px;
   }
   .w-\[363px\] {
     width: 363px;
-  }
-  .w-\[450px\] {
-    width: 450px;
-  }
-  .w-\[500px\] {
-    width: 500px;
   }
   .w-\[511px\] {
     width: 511px;
@@ -604,9 +577,6 @@
   }
   .w-\[580px\] {
     width: 580px;
-  }
-  .w-\[600px\] {
-    width: 600px;
   }
   .w-\[640px\] {
     width: 640px;
@@ -715,9 +685,6 @@
   }
   .resize {
     resize: both;
-  }
-  .grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -1137,10 +1104,6 @@
     --tw-leading: 100%;
     line-height: 100%;
   }
-  .leading-tight {
-    --tw-leading: var(--leading-tight);
-    line-height: var(--leading-tight);
-  }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
@@ -1214,11 +1177,6 @@
       opacity: 50%;
     }
   }
-  .max-\[1720\]\:right-0 {
-    @media (width < 1720) {
-      right: calc(var(--spacing) * 0);
-    }
-  }
   .max-\[2560px\]\:-right-3 {
     @media (width < 2560px) {
       right: calc(var(--spacing) * -3);
@@ -1254,14 +1212,14 @@
       width: 500px;
     }
   }
+  .max-\[2560px\]\:w-\[520px\] {
+    @media (width < 2560px) {
+      width: 520px;
+    }
+  }
   .max-\[1920px\]\:right-2 {
     @media (width < 1920px) {
       right: calc(var(--spacing) * 2);
-    }
-  }
-  .max-\[1920px\]\:right-5 {
-    @media (width < 1920px) {
-      right: calc(var(--spacing) * 5);
     }
   }
   .max-\[1920px\]\:block {
@@ -1279,26 +1237,6 @@
       height: calc(var(--spacing) * 160);
     }
   }
-  .max-\[1920px\]\:h-\[250px\] {
-    @media (width < 1920px) {
-      height: 250px;
-    }
-  }
-  .max-\[1920px\]\:h-\[260px\] {
-    @media (width < 1920px) {
-      height: 260px;
-    }
-  }
-  .max-\[1920px\]\:h-\[275px\] {
-    @media (width < 1920px) {
-      height: 275px;
-    }
-  }
-  .max-\[1920px\]\:h-\[290px\] {
-    @media (width < 1920px) {
-      height: 290px;
-    }
-  }
   .max-\[1920px\]\:h-\[295px\] {
     @media (width < 1920px) {
       height: 295px;
@@ -1309,34 +1247,9 @@
       height: 300px;
     }
   }
-  .max-\[1920px\]\:h-\[310px\] {
-    @media (width < 1920px) {
-      height: 310px;
-    }
-  }
-  .max-\[1920px\]\:h-\[315px\] {
-    @media (width < 1920px) {
-      height: 315px;
-    }
-  }
   .max-\[1920px\]\:h-\[330px\] {
     @media (width < 1920px) {
       height: 330px;
-    }
-  }
-  .max-\[1920px\]\:h-\[335px\] {
-    @media (width < 1920px) {
-      height: 335px;
-    }
-  }
-  .max-\[1920px\]\:h-\[350px\] {
-    @media (width < 1920px) {
-      height: 350px;
-    }
-  }
-  .max-\[1920px\]\:h-\[376px\] {
-    @media (width < 1920px) {
-      height: 376px;
     }
   }
   .max-\[1920px\]\:h-\[390px\] {
@@ -1354,24 +1267,9 @@
       width: 350px;
     }
   }
-  .max-\[1920px\]\:w-\[400px\] {
-    @media (width < 1920px) {
-      width: 400px;
-    }
-  }
-  .max-\[1920px\]\:w-\[420px\] {
-    @media (width < 1920px) {
-      width: 420px;
-    }
-  }
   .max-\[1920px\]\:w-\[430px\] {
     @media (width < 1920px) {
       width: 430px;
-    }
-  }
-  .max-\[1920px\]\:w-\[450px\] {
-    @media (width < 1920px) {
-      width: 450px;
     }
   }
   .max-\[1920px\]\:w-\[460px\] {
@@ -1384,34 +1282,74 @@
       width: 470px;
     }
   }
-  .max-\[1920px\]\:w-\[630px\] {
-    @media (width < 1920px) {
-      width: 630px;
-    }
-  }
-  .max-\[1920px\]\:w-\[690px\] {
-    @media (width < 1920px) {
-      width: 690px;
-    }
-  }
   .max-\[1920px\]\:w-\[710px\] {
     @media (width < 1920px) {
       width: 710px;
     }
   }
-  .max-\[1920px\]\:w-\[715px\] {
-    @media (width < 1920px) {
-      width: 715px;
-    }
-  }
-  .max-\[1920px\]\:w-\[735px\] {
-    @media (width < 1920px) {
-      width: 735px;
-    }
-  }
   .max-\[1920px\]\:w-\[1020px\] {
     @media (width < 1920px) {
       width: 1020px;
+    }
+  }
+  .max-\[1920px\]\:object-cover {
+    @media (width < 1920px) {
+      object-fit: cover;
+    }
+  }
+  .max-\[1820px\]\:right-2 {
+    @media (width < 1820px) {
+      right: calc(var(--spacing) * 2);
+    }
+  }
+  .max-\[1820px\]\:h-\[295px\] {
+    @media (width < 1820px) {
+      height: 295px;
+    }
+  }
+  .max-\[1820px\]\:h-\[330px\] {
+    @media (width < 1820px) {
+      height: 330px;
+    }
+  }
+  .max-\[1820px\]\:h-\[390px\] {
+    @media (width < 1820px) {
+      height: 390px;
+    }
+  }
+  .max-\[1820px\]\:h-\[400px\] {
+    @media (width < 1820px) {
+      height: 400px;
+    }
+  }
+  .max-\[1820px\]\:w-\[430px\] {
+    @media (width < 1820px) {
+      width: 430px;
+    }
+  }
+  .max-\[1820px\]\:w-\[460px\] {
+    @media (width < 1820px) {
+      width: 460px;
+    }
+  }
+  .max-\[1820px\]\:w-\[470px\] {
+    @media (width < 1820px) {
+      width: 470px;
+    }
+  }
+  .max-\[1820px\]\:w-\[710px\] {
+    @media (width < 1820px) {
+      width: 710px;
+    }
+  }
+  .max-\[1820px\]\:w-\[1020px\] {
+    @media (width < 1820px) {
+      width: 1020px;
+    }
+  }
+  .max-\[1820px\]\:object-cover {
+    @media (width < 1820px) {
+      object-fit: cover;
     }
   }
   .max-\[1720px\]\:right-0 {
@@ -2187,11 +2125,6 @@
   .max-\[1024px\]\:top-1\.5 {
     @media (width < 1024px) {
       top: calc(var(--spacing) * 1.5);
-    }
-  }
-  .max-\[1024px\]\:-right-2 {
-    @media (width < 1024px) {
-      right: calc(var(--spacing) * -2);
     }
   }
   .max-\[1024px\]\:-right-7 {
@@ -3190,11 +3123,6 @@
       word-break: normal;
     }
   }
-  .min-\[1024px\]\:max-h-240 {
-    @media (width >= 1024px) {
-      max-height: calc(var(--spacing) * 240);
-    }
-  }
   .min-\[1024px\]\:max-h-245 {
     @media (width >= 1024px) {
       max-height: calc(var(--spacing) * 245);
@@ -3223,112 +3151,6 @@
   .min-\[1920px\]\:flex-1 {
     @media (width >= 1920px) {
       flex: 1;
-    }
-  }
-  .md\:block {
-    @media (width >= 48rem) {
-      display: block;
-    }
-  }
-  .md\:hidden {
-    @media (width >= 48rem) {
-      display: none;
-    }
-  }
-  .md\:h-8 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 8);
-    }
-  }
-  .md\:h-\[320px\] {
-    @media (width >= 48rem) {
-      height: 320px;
-    }
-  }
-  .md\:w-8 {
-    @media (width >= 48rem) {
-      width: calc(var(--spacing) * 8);
-    }
-  }
-  .md\:p-8 {
-    @media (width >= 48rem) {
-      padding: calc(var(--spacing) * 8);
-    }
-  }
-  .md\:text-2xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-2xl);
-      line-height: var(--tw-leading, var(--text-2xl--line-height));
-    }
-  }
-  .lg\:col-span-2 {
-    @media (width >= 64rem) {
-      grid-column: span 2 / span 2;
-    }
-  }
-  .lg\:col-span-3 {
-    @media (width >= 64rem) {
-      grid-column: span 3 / span 3;
-    }
-  }
-  .lg\:block {
-    @media (width >= 64rem) {
-      display: block;
-    }
-  }
-  .lg\:hidden {
-    @media (width >= 64rem) {
-      display: none;
-    }
-  }
-  .lg\:h-\[500px\] {
-    @media (width >= 64rem) {
-      height: 500px;
-    }
-  }
-  .lg\:grid-cols-6 {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(6, minmax(0, 1fr));
-    }
-  }
-  .lg\:text-\[2rem\] {
-    @media (width >= 64rem) {
-      font-size: 2rem;
-    }
-  }
-  .xl\:w-\[400px\] {
-    @media (width >= 80rem) {
-      width: 400px;
-    }
-  }
-  .xl\:w-\[420px\] {
-    @media (width >= 80rem) {
-      width: 420px;
-    }
-  }
-  .xl\:w-\[430px\] {
-    @media (width >= 80rem) {
-      width: 430px;
-    }
-  }
-  .xl\:w-\[630px\] {
-    @media (width >= 80rem) {
-      width: 630px;
-    }
-  }
-  .xl\:w-\[1020px\] {
-    @media (width >= 80rem) {
-      width: 1020px;
-    }
-  }
-  .\32 xl\:block {
-    @media (width >= 96rem) {
-      display: block;
-    }
-  }
-  .\32 xl\:hidden {
-    @media (width >= 96rem) {
-      display: none;
     }
   }
 }
